Add Novo Altulização do Arquivo

--- a/exercicio_html_js/index.html
+++ b/exercicio_html_js/index.html
@@ -21,17 +21,14 @@
                 <form action="" method="get" id="form-depositor">
                     <h1>Placa Banking </h1>
                     <h2>Depositor</h2>
-                    <label for="nome-usuario">Nome Usuário:</label><br>
-                    <input type="text" name="nome-usuario" id="nome-beneficiario" placeholder="Digite seu nome completor...." required/><br>
-                    <p class="erro-messagem">
-                        O nome precisa ser completor
-                    </p>
-                    <label for="numero-conta">Numero da Conta:</label><br>
-                    <input type="number" name="numero-conta" id="numero-conta" placeholder="Digite o numero sua conta...." required/><br>
-                    <label for="valor-depositor">Valor Depositor:</label><br>
-                    <input type="number" name="valor-depositor" id="valor-depositor" placeholder="Digite o valor do depositor...." required/><br>
-                    <button type="submit">Depositor</button>
+                    <label for="numero-conta">campo A</label><br>
+                    <input type="number" name="numero-conta" id="CampoA" placeholder="Digite um numero " required/><br>
+                    
+                    <label for="valor-depositor">campo B</label><br>
+                    <input type="number" name="valor-depositor" id="CampoB" placeholder="Digite segundo numero." required/><br>
+                    <button type="submit">Enviar</button>
                 </form><!-- formulario form-->
+                <p class="erro-messagem"></p>
                 <p class="successo-messagem"></p>
         </section><!-- formulario-->
     </div><!-- container -->
